[metadata]
name = troublebox
version = attr: troublebox.__version__
author = Florian Schulze and Contributors
license = BSD


[options]
packages = troublebox
package_dir =
    = src
include_package_data = True
install_requires =
    SQLAlchemy
    alembic
    plaster_pastedeploy
    pyramid
    pyramid
    pyramid_chameleon
    pyramid_retry
    pyramid_tm
    transaction
    waitress
    zope.sqlalchemy


[options.entry_points]
paste.app_factory =
    main = troublebox:make_app

console_scripts =
    troublebox=troublebox.main:main
